<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_feed"
            android:title="@string/menu_feed" />

        <item
            android:id="@+id/nav_members_list"
            android:icon="@drawable/ic_member_list"
            android:title="@string/menu_member" />

        <item
            android:id="@+id/nav_friends_list"
            android:icon="@drawable/ic_friends_list"
            android:title="@string/menu_friend" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
