<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:layout_margin="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:id="@+id/changePassForm"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editChangePassOldPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_change_old_password"
                style="@style/CustomInnerInput"/>

            <EditText
                android:id="@+id/editChangePassNewPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_change_new_password"
                style="@style/CustomInnerInput"/>

            <EditText
                android:id="@+id/editChangePassConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_change_confirm_password"
                style="@style/CustomInnerInput"/>

            <Button
                android:id="@+id/btnChangePasswordSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                style="@style/CustomBtn"
                android:text="@string/change_password_btn" />

        </LinearLayout>

</ScrollView>