<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="130dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:id="@+id/loginForm"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgTitleLogo"
                    android:layout_width="200dp"
                    android:layout_height="46dp"
                    app:srcCompat="@drawable/ic_title" />

                <TextView
                    android:id="@+id/txtLoginSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_here"
                    style="@style/subTitle"/>

                <EditText
                    android:id="@+id/editLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/prompt_username"
                    style="@style/CustomInput"/>

                <EditText
                    android:id="@+id/editLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    style="@style/CustomInput"/>
                <Button
                    android:id="@+id/btnLoginSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    style="@style/CustomBtn"
                    android:text="@string/login_btn" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/txtLoginForgot"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/forget_link"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/txtLoginReg"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_link"
                        android:layout_marginTop="8dp"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>