<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_username"
                    android:textColor="#000"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtLastLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_last_activity"
                    android:textColor="#aaa"
                    android:textSize="14dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnCancelRequest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:textSize="20px"
                    android:paddingTop="5px"
                    android:paddingBottom="5px"
                    android:text="@string/member_cancel_request"
                    android:textColor="#000"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/btnCancelFriendship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:textSize="20px"
                    android:paddingTop="5px"
                    android:paddingBottom="5px"
                    android:text="@string/member_cancel_friendship"
                    android:visibility="gone"
                    android:textColor="#000" />
                <Button
                    android:id="@+id/btnSendRequest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:textSize="20px"
                    android:padding="5px"
                    android:text="@string/member_add_friend"
                    android:visibility="gone"
                    android:textColor="#000" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/requestAction"
                    android:visibility="gone">
                    <Button
                        android:id="@+id/btnAcceptRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:textSize="20px"
                        android:padding="5px"
                        android:text="@string/member_request_accept"
                        android:textColor="#000" />
                    <Button
                        android:id="@+id/btnRejectRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:textSize="20px"
                        android:padding="5px"
                        android:text="@string/member_request_reject"
                        android:textColor="#000" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#cccccc" />
</LinearLayout>
