<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#77000000">

            <LinearLayout
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_back" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="70dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:id="@+id/forgotPassForm"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgTitleLogo"
                        android:layout_width="200dp"
                        android:layout_height="46dp"
                        app:srcCompat="@drawable/ic_title" />

                    <TextView
                        android:id="@+id/txtForgetSubTitle"
                        style="@style/subTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password" />

                    <EditText
                        android:id="@+id/edtForgetEmail"
                        style="@style/CustomInput"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="45dp"
                        android:hint="@string/forgot_email_hint" />

                    <Button
                        android:id="@+id/btnForgetSubmit"
                        style="@style/CustomBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/forget_btn" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>